# hyper-connections

./: .gitignore  pyproject.toml
src/hyper_connections/: eval.py  olmo.py  train.py  train_othello.py  util.py
src/hyper_connections/data/: token_stream.py
src/hyper_connections/model/: act.py  gpt.py  hc.py  norm.py  rope.py  transformer.py
