[project]
name = "hyper-connections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair>=5.5.0",
    "datasets<4.0.0",
    "einops>=0.8.1",
    "huggingface-hub<=0.20.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "numpy<2",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.40.2",
    "wandb>=0.22.3",
    "weave>=0.52.17",
]
